# Discord-Checker-RS

./: Cargo.toml  README.md
src/: checker.rs  main.rs
